--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net": "^1.13.7",
+        "jquery": "^3.7.1"
     }
 }
